--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "!diablo3"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
